# arcium-confidential-transfer

./: .gitignore  Anchor.toml  Dockerfile  README.md  id.json  package.json
artifacts/: arcium_pool.json  arcium_pool_ata.json  arx_ata_BPUe_hiJk.json  arx_ata_HPwB_ZkC2.json  arx_ata_tgVk_NoBE.json  arx_mint.json  arx_node_BPUe_hiJk.json  arx_node_tgVk_NoBE.json  callback-server-env  callback_server_acc_6iBC_4oXF.json  circuits_hash.txt  cluster_acc_0.json  docker-compose-arx-env.yml  executing_pool_acc.json  mempool_acc.json  mxe_acc.json  operator_acc_BPUe_hiJk.json  operator_acc_tgVk_NoBE.json  primary_stake_acc_BPUe_hiJk.json  primary_stake_acc_tgVk_NoBE.json  stake_queue_acc_BPUe_hiJk.json  stake_queue_acc_tgVk_NoBE.json  wallet_acc_BPUe_hiJk.json  wallet_acc_HPwB_ZkC2.json  wallet_acc_tgVk_NoBE.json  wrap_raw_circuit_0.json
artifacts/localnet/: callback_server.json  identity_0.pem  identity_1.pem  node_0.json  node_1.json
encrypted-ixs/src/: lib.rs
programs/confidential_transfer_arcium/: Cargo.toml
programs/confidential_transfer_arcium/src/: lib.rs
programs/confidential_transfer_arcium_demo/: Cargo.toml
programs/confidential_transfer_arcium_demo/src/: lib.rs
tests/: confidential_transfer_arcium_demo.ts
