[package]
name = "confidential_transfer_arcium"
version = "0.1.0"
description = "Created with Arcium & Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "confidential_transfer_arcium"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = "0.31.1"

arcium-client = { default-features = false, version = "0.1.47" }
arcium-macros = { version = "0.1.47" }
arcium-anchor = { version = "0.1.47" }
